# rust-artifact

./: .env  .gitignore  Cargo.toml  LICENSE
artifact/: Cargo.toml
artifact-cli/: Cargo.toml
artifact-cli/src/: main.rs
artifact-tui/: Cargo.toml
artifact-tui/src/: main.rs
artifact/migrations/2022-10-10-000001_create_address/: up.sql
artifact/migrations/2022-10-10-000001_create_tokens/: up.sql
artifact/migrations/2022-10-10-000002_create_address/: up.sql
artifact/migrations/2022-10-10-000002_create_tokens/: up.sql
artifact/migrations/2022-10-10-000003_create_balances/: up.sql
artifact/migrations/2022-10-10-000004_create_credits/: down.sql  up.sql
artifact/migrations/2022-10-10-000005_create_debits/: down.sql  up.sql
artifact/src/: indexer.rs  lib.rs  options.rs  schema.rs
artifact/src/models/: address.rs  balance.rs  credit.rs  debit.rs  mod.rs  token.rs
