[package]
name = "aritfact-tui"
version = "0.1.0"
edition = "2021"
authors = ["Dan Anderson  <me@dananderson.org>"]
repository = "https://github.com/rust-artifact/rust-artifact"
keywords = ["bitcoin", "artifact", "crypto", "nft", "rugged"]
readme = "README.md"
license = "CC0-1.0"

[dependencies]
artifact = { path = "../artifact" }
crossterm = "0.25.0"
tui = "0.19.0"
